--- a/style.css
+++ b/style.css
@@ -11177,7 +11177,7 @@ ul .btn {
 
 .angleDir {
   transform-origin: bottom center;
-  position: absolute;
+  position: fixed;
   overflow: hidden;
   height: 110px;
   width: 7px;
